# Qt-Creator

./: CMakeLists.txt  main.cpp  read.md
